# my-comic-reading

./: .gitignore  Cargo.toml  README.md  workflow.md
assets/: README.md  app.js  dom.js  i18n.js  index.html  layout.html  layout.js  styles.css
scripts/: package_macos.sh
src/: browser.rs  files.rs  main.rs  web.rs
